Add capability to build vue js for nodejs and serve from it

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules
 vue-ui/.DS_Store
 vue-ui/node_modules/
 /dist/
+vue-ui/dist/
 vue-ui/npm-debug.log*
 vue-ui/yarn-debug.log*
 vue-ui/yarn-error.log*
