--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.6.9",
     "eslint": "^4.15.0",
     "express": "~4.15.5",
+    "mongodb": "2.2.34",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
+    "q": "^1.5.1",
     "serve-favicon": "~2.4.5"
   }
 }
