--- a/vue-ui/package.json
+++ b/vue-ui/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "element-ui": "^2.0.11",
+    "launch-editor-middleware": "^2.2.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1"
