--- a/vue-ui/package.json
+++ b/vue-ui/package.json
@@ -19,7 +19,8 @@
     "moment": "^2.20.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.5",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
