--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "eslint": "^4.15.0",
     "express": "~4.15.5",
+    "jsonschema": "^1.2.2",
     "mongodb": "2.2.34",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
