--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,13 @@ services:
     image: loaded_mongodb
     networks:
       - back-end
+  restore_db:
+    image: mongo:3.6.2
+    command: "mongorestore -h mydb -d tripdb /mongo_backup/initial_backup/tripdb"
+    volumes:
+      - ./mongo_backup:/mongo_backup
+    networks:
+      - back-end
 
 networks:
   front-end: {}
